Fixed globe-stretching issue

--- a/style.css
+++ b/style.css
@@ -17,8 +17,7 @@ body {
     backdrop-filter: blur(14px) saturate(180%);
     -webkit-backdrop-filter: blur(14px) saturate(180%);
     background-color: rgba(255, 255, 255, 0.484);
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.125);
+
     /* center div */
     position: absolute;
     left: 50%;
